# Geant4

./: README.md
parser/: CMakeLists.txt  cadmesh_example.cpp  config.xml  geometry.cfg  geometry.xml
parser/include/: CentralConfig.h  DetectorConstruction.hh  GeometryConfig.h  MaterialBuilder.h  SolidDescriptor.h  SolidMaker.h  VolumeBuilder.h
parser/macros/: vis.mac
parser/src/: CentralConfig.cpp  DetectorConstruction.cpp  GeometryConfig.cpp  MaterialBuilder.cpp  VolumeBuilder.cpp
